[gd_scene load_steps=2 format=3 uid="uid://cik7d71sjm8s7"]

[ext_resource type="Script" path="res://Components/bpm.gd" id="1_pemck"]

[node name="Bpm" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -15.5
offset_right = 32.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_pemck")

[node name="ButtonDecrease" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " - "

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "140"

[node name="ButtonIncrease" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " + "

[connection signal="pressed" from="ButtonDecrease" to="." method="_on_button_decrease_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="ButtonIncrease" to="." method="_on_button_increase_pressed"]
